--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>SIT725 Prac 6</title>
+		<title>SIT725 Prac 7</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -19,7 +19,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col s12 center-align">
-						<h1 id="heading">Welcome to SIT 725 Week 6 </h1>
+						<h1 id="heading">Welcome to SIT 725 Week 7 </h1>
 						<p class="flow-text">This is a demo application that tries to use a few components from materialize and through this practical we try to have some fun with Materialize and its
 							components
 						</p>
@@ -72,5 +72,9 @@
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 		<script src="js/scriptMongo.js"></script>
+		<script src="socket.io/socket.io.js"></script>
+		<script src="js/env.js"></script>
+
+
 	</body>
 </html>
